--- a/views/application/edit.ejs
+++ b/views/application/edit.ejs
@@ -1,37 +1,41 @@
+<link rel="stylesheet" href="/stylesheets/style.css" />
+
 <%- include('../partials/_nav') %>
 <title>Editing <%= application.title %></title>
-<h1>Edit <%= application.title %> at <%= application.company %></h1>
-<form action="/users/<%= user._id %>/application/<%= application._id %>?_method=PUT" method="POST">
-  <label for="company">Company</label>
-  <input type="text" name="company" id="company" value="<%= application.company %>">
-  <br>
-  <label for="title">Title</label>
-  <input type="text" name="title" id="title" value="<%= application.title %>">
-  <br>
-  <label for="notes">Notes</label>
-  <textarea name="notes" id="notes"></textarea>
-  <br>
-  <label for="postingLink">Posting Link</label>
-  <input type="text" name="postingLink" id="postingLink" value="<%= application.postingLink %>">
-  <br>
-  <label for="status">Status</label>
-  <select name="status" id="status">
-    <option value="interested">
-      <%= application.status === "interested" ? "selected" : "" %>
-      Interested</option>
-    <option value="applied">
-      <%= application.status === "applied" ? "selected" : "" %>
-      Applied</option>
-    <option value="interviewing">
-      <%= application.status === "interviewing" %>
-      Interviewing</option>
-    <option value="rejected">
-      <%= application.status === "rejected" %>
-      Rejected</option>
-    <option value="accepted">
-      <%= application.status === "accepted" %>
-      Accepted</option>
-  </select>
-  <br>
-  <button type="submit">Update Application</button>
-</form>
+<div class="edit-body">
+  <h1>Edit <%= application.title %> at <%= application.company %></h1>
+  <form action="/users/<%= user._id %>/application/<%= application._id %>?_method=PUT" method="POST">
+    <label for="company">Company</label>
+    <input type="text" name="company" id="company" value="<%= application.company %>">
+    <br>
+    <label for="title">Title</label>
+    <input type="text" name="title" id="title" value="<%= application.title %>">
+    <br>
+    <label for="notes">Notes</label>
+    <textarea name="notes" id="notes"></textarea>
+    <br>
+    <label for="postingLink">Posting Link</label>
+    <input type="text" name="postingLink" id="postingLink" value="<%= application.postingLink %>">
+    <br>
+    <label for="status">Status</label>
+    <select name="status" id="status">
+      <option value="interested">
+        <%= application.status === "interested" ? "selected" : "" %>
+        Interested</option>
+      <option value="applied">
+        <%= application.status === "applied" ? "selected" : "" %>
+        Applied</option>
+      <option value="interviewing">
+        <%= application.status === "interviewing" %>
+        Interviewing</option>
+      <option value="rejected">
+        <%= application.status === "rejected" %>
+        Rejected</option>
+      <option value="accepted">
+        <%= application.status === "accepted" %>
+        Accepted</option>
+    </select>
+    <br>
+    <button type="submit">Update Application</button>
+  </form>
+</div>
