--- a/views/application/index.ejs
+++ b/views/application/index.ejs
@@ -1,11 +1,15 @@
+<link rel="stylesheet" href="/stylesheets/style.css" />
 <%- include("../partials/_nav") %>
-
-<h1>You application</h1>
-
-<ul>
-  <% applications.forEach(app => { %>
+<div class="all-apps-body">
+  <div class="all-apps-header">
+    <h1>You Apps</h1>
+    <a class="add-app-link" href="/users/<%=user._id%>/application/new"></a>
+  </div>
+  <ul>
+    <% applications.forEach(app => { %>
     <a href="/users/<%= user._id %>/application/<%= app._id %>">
-    <li><%= app.title %> at <%= app.company %></li>
+      <li><%= app.title %> at <%= app.company %></li>
     </a>
-  <% }) %>
-</ul>
+    <% }) %>
+  </ul>
+</div>
