--- a/views/application/show.ejs
+++ b/views/application/show.ejs
@@ -1,16 +1,35 @@
+<link rel="stylesheet" href="/stylesheets/show.css" />
 <%- include('../partials/_nav.ejs') %>
-  <h1><%= application.title %> at <%= application.company %></h1>
-  <% if (application.notes) { %>
-    <p>Notes: <%= application.notes %></p>
-  <% } %>
-  <% if (application.postingLink) { %>
-    <a href="<%= application.postingLink %>">View job posting</a>
-  <% } %>
-  <p>Current Status: <%= application.status %></p>
-  <a href="/users/<%= user._id %>/application/<%= application._id %>/edit">Edit this Application</a>
-  <form
-  action="/users/<%= user._id %>/application/<%= application._id %>?_method=DELETE"
-  method="POST"
->
-  <button type="submit">Delete this application</button>
-</form>
+  <div class="show-body">
+    <div class="show-header">
+      <h1><%= application.title %> at <%= application.company %></h1>
+      <div class="show-sidebar">
+        <div class="show-actions">
+          <a
+            href="/users/<%= user._id %>/application/<%= application._id %>/edit"
+          >
+            Edit App
+          </a>
+          <form
+            action="/users/<%= user._id %>/application/<%= application._id %>?_method=DELETE"
+            method="POST"
+          >
+            <button type="submit">Delete App</button>
+          </form>
+        </div>
+        <p>Current Status: <%= application.status %></p>
+      </div>
+    </div>
+    <div class="show-notes-container">
+      <% if (application.postingLink) { %>
+      <a href="<%= application.postingLink %>" target="_blank"
+        >View job posting</a
+      >
+      <% } %> <% if (application.notes) { %>
+      <div class="show-notes">
+        <h2>Notes:</h2>
+        <p><%= application.notes %></p>
+      </div>
+      <% } %>
+    </div>
+  </div>
