--- a/views/auth/sign-up.ejs
+++ b/views/auth/sign-up.ejs
@@ -1,17 +1,17 @@
+<link rel="stylesheet" href="/stylesheets/style.css" />
 <%- include("../partials/_nav") %>
-
-<h1>Create a New Account</h1>
-
-<form action="/auth/sign-up" method="post">
-  <label for="username">Username:</label>
-  <input type="text" name="username" id="username" />
-
-  <br />
-  <label for="password">Password:</label>
-  <input type="password" name="password" id="password" />
-  <br />
-  <label for="ConfirmPassword">Confirm password:</label>
-  <input type="password" name="confirmPassword" id="confirmPassword" />
-  <br />
-  <button type="submit">sign-up</button>
-</form>
+<div class="sign-up-container">
+  <h1>Create a New Account</h1>
+  <form action="/auth/sign-up" method="post">
+    <label for="username">Username:</label>
+    <input type="text" name="username" id="username" />
+    <br />
+    <label for="password">Password:</label>
+    <input type="password" name="password" id="password" />
+    <br />
+    <label for="ConfirmPassword">Confirm password:</label>
+    <input type="password" name="confirmPassword" id="confirmPassword" />
+    <br />
+    <button type="submit">sign-up</button>
+  </form>
+</div>
