--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,8 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Skyrockit</title>
   </head>
-  <body>
-    <%- include("./partials/_nav") %>
-    <h1>Skyrockit App</h1>
-  </body>
+<body class="index-body">
+  <%- include('./partials/_nav.ejs') %>
+  <div class="index-container">
+    <div class="text-container">
+      <h1 class="main-header">Skyrockit</h1>
+      <p class="subheader">A job application tracker.</p>
+    </div>
+    <div class="auth-links">
+      <a class="signup-link" href="/auth/sign-up">Sign Up</a>
+      <a class="signin-link" href="/auth/sign-in">Sign In</a>
+    </div>
+  </div>
+</body>
 </html>
